--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,17 @@
 </head>
 <body>
     <h1>Vote for 2024 Oscar Nominees !</h1>
+    
     <form method="post" action="{{ url_for('vote') }}">
+        <label for="user_name">Enter Your Name:</label>
+        <input type="text" id="user_name" name="user_name" required><br>
         {% for category, nominees in categories.items() %}
             <fieldset>
                 <legend>{{ category }}
                     {% if category == 'Best Picture' %}
-                        (5 points)
+                        (4 points)
+                    {% elif category == 'Best Director' %}
+                        (3 points)
                     {% elif category == 'Best Actor' or category == 'Best Actress' %}
                         (2 points)
                     {% else %}
